Release Candidate 2
===================

- Applied Lee Henson's patch fixing AR-86
  "Expose DetachedCriteria on ActiveRecordBase<T>.SlicedFindAll"

- Fixed AR-84:  ActiveRecord TransactionScope should export interface to set IsolationLevel
  Now you can specify the isolation level when you create a TransactionScope

- Applied Carlos Ble's patch adding Replicate support to ActiveRecordBase

- Moved ProjectionQuery and ScalarProjectionQuery to Castle.ActiveRecord.Queries, with the rest of the queries.

- Added untyped projection support, using just ProjectionQuery<Post>, which uses object[] tuples.

- Added real projection support, which allows the following code:
ProjectionQuery<Post, PostTitleAndId> proj = new ProjectionQuery<Post, PostTitleAndId>(
	Projections.Property("Title"), Projections.Property("Id"));
ICollection<PostTitleAndId> posts = proj.Execute();
foreach(PostTitleAndId titleAndId in posts)
{
	PostsList.Add( new ListItem(titleAndId.Title, titleAndId.Id) );
	
}

- Renamed ProjectionQuery<T> ScalarProjectionQuery<T>, in preperation for real projections.

- Added DetachCrietia support in ARBase<T>, which allows integration with NQG, and in general enables taking advantage of the full criteria API.
   Improved methods are FindOne, FindAll, FindFirst
   
- Move to used NHibernate 1.2 rev #2352

- Applied Josh Robb's patch adding a check for isWeb=true on the Session module.

- Returned to the default lazy false behavior.

- Will automatically initialize entities when loading outside of scope.

- Removed IModelNode since it was no longer of any value.

- Added XML Documentation to all public/ protected methods

- Moved to using NHibernate 1.2 beta 1
  IEntityPersister instead of IClassPersister
  I had some issues with Nullables.dll support, but mainly because the hard coded version number.