@@ -570,6 +570,7 @@
                 />
                 <File
                     RelPath = "Framework\Queries\ProjectionQuery.cs"
+                    SubType = "Code"
                     BuildAction = "Compile"
                 />
                 <File
