@@ -15,9 +15,7 @@
 namespace Castle.ActiveRecord.Framework.Validators
 {
 	using System;
-	using System.Reflection;
-
-
+	
 	/// <summary>
 	/// Validates that a property and a matching property are the same.
 	/// This it used when you need to accept two identical inputs from the user, for instnace, 
@@ -44,7 +42,7 @@ namespace Castle.ActiveRecord.Framework.Validators
 		/// <returns><c>true</c> if the field is OK</returns>
 		public override bool Perform(object instance, object fieldValue)
 		{
-			object confValue = GetFieldOrPropertyValue(instance);
+			object confValue = GetFieldOrPropertyValue(instance, _confirmationFieldOrProperty);
 
 			if (confValue == null && (fieldValue == null || fieldValue.ToString().Length == 0))
 			{
@@ -65,27 +63,6 @@ namespace Castle.ActiveRecord.Framework.Validators
 			}
 
 			return confValue.Equals(fieldValue);
-		}
-
-		private object GetFieldOrPropertyValue(object instance)
-		{
-			PropertyInfo pi = instance.GetType().GetProperty(_confirmationFieldOrProperty, BindingFlags.DeclaredOnly|BindingFlags.Instance|BindingFlags.Public);
-			
-			if (pi == null)
-			{
-				FieldInfo fi = instance.GetType().GetField(_confirmationFieldOrProperty, BindingFlags.DeclaredOnly|BindingFlags.Instance|BindingFlags.Public);
-
-				if (fi != null)
-				{
-					return fi.GetValue( instance );
-				}
-			}
-			else
-			{
-				return pi.GetValue(instance, null);
-			}
-
-			throw new ValidationException("No public instance field or property named " + _confirmationFieldOrProperty + " for type " + instance.GetType().FullName);
 		}
 
 		/// <summary>
